--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Django==4.2.0
+Django==4.1.8
 gunicorn==20.1.0
 whitenoise==6.4.0
 dj_database_url==1.3.0
 psycopg2-binary==2.9.6
 django-environ==0.10.0
+djongo==1.3.6
+pytz
+ipython
